[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bento_wes"
version = "0.14.7"
description = "Workflow execution service for the Bento platform."
authors = [
    "David Lougheed <david.lougheed@mail.mcgill.ca>",
    "Simon Chénard <simon.chenard2@mcgill.ca>",
    "Paul Pillot <paul.pillot@computationalgenomics.ca>",
]
readme = "README.md"
packages = [{include = "bento_wes"}]
include = ["bento_wes/schema.sql"]
repository = "https://github.com/bento-platform/bento_wes"
license = "LGPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10.0"
bento-lib = {extras = ["flask"], version = "^12.2.3"}
celery = {extras = ["redis"], version = "^5.4.0"}
requests = "^2.32.4"
Flask = "~3.0.3"
pydantic = "^2.7.1"
flask-cors = "^6.0.0"
werkzeug = "~3.0.6"
asgiref = "^3.7.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.1"
flake8 = "^7.0.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
tox = "^4.12.1"
debugpy = "^1.8.6"
responses = "^0.25.3"
