[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bento_wes"
version = "0.15.1"
description = "Workflow execution service for the Bento platform."
authors = [
    "David Lougheed <david.lougheed@mail.mcgill.ca>",
    "Simon Chénard <simon.chenard2@mcgill.ca>",
    "Paul Pillot <paul.pillot@computationalgenomics.ca>",
]
readme = "README.md"
packages = [{include = "bento_wes"}]
include = ["bento_wes/schema.sql"]
repository = "https://github.com/bento-platform/bento_wes"
license = "LGPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10.0"
bento-lib = {extras = ["flask"], version = "^13.5.0"}
celery = {extras = ["redis"], version = "^5.5.3"}
requests = "^2.32.4"
Flask = "~3.1.1"
pydantic = "^2.7.1"
flask-cors = "^6.0.0"
werkzeug = "~3.1.3"
asgiref = "^3.8.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.1"
pytest = "^8.3.2"
pytest-cov = "^6.2.1"
tox = "^4.12.1"
debugpy = "^1.8.6"
responses = "^0.25.3"
ruff = "^0.12.0"

[tool.ruff]
line-length = 120
