[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bento_wes"
version = "0.15.1"
description = "Workflow execution service for the Bento platform."
authors = [
    "David Lougheed <david.lougheed@mail.mcgill.ca>",
    "Simon Chénard <simon.chenard2@mcgill.ca>",
    "Paul Pillot <paul.pillot@computationalgenomics.ca>",
]
readme = "README.md"
packages = [{include = "bento_wes"}]
include = ["bento_wes/schema.sql"]
repository = "https://github.com/bento-platform/bento_wes"
license = "LGPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.12.0"
bento-lib = {extras = ["fastapi"], version = "^14.0.3"}
celery = {extras = ["redis"], version = "^5.5.3"}
requests = "^2.32.4"
pydantic = "^2.7.1"
werkzeug = "~3.1.4"
asgiref = "^3.8.1"
fastapi = "^0.122.0"
uvicorn = "^0.37.0"
httpx = "^0.28.1"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.1"
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
tox = "^4.32.0"
debugpy = "^1.8.17"
ruff = "^0.14.6"
watchfiles = "^1.1.0"
respx = "^0.22.0"

[tool.ruff]
line-length = 120
